# cut-pdf-bot

./: README.md  bot_fsm_demonstration_упрощенный.drawio  requirements.txt  setup.cfg
docs/: bot_fsm_demonstration.drawio  bot_fsm_demonstration_упрощенный.drawio
src/: bot.py  cutter.py  keyboards.py  old.py  states.py
src/bot/: bot.py  keyboards.py  states.py
src/bot/handlers/: rotate_pages.py  separate_pages.py
src/bot/util/: pdf_transform.py
src/handlers/: separate_pages.py
