[metadata]
name = rtsp-camera-status

[flake8]
max-line-length = 80
exclude =
    # No need to traverse our git directory
    .git,
    # There's no value in checking cache directories
    __pycache__

[isort]
balanced_wrapping = true
include_trailing_comma=True
sections=FUTURE, STDLIB, THIRDPARTY, FIRSTPARTY, LOCALFOLDER
line_length = 80
lines_after_imports=2
known_first_party =

[mypy]

[pylint]